--- a/trading-cnn-binary-one-dim.ipynb
+++ b/trading-cnn-binary-one-dim.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -117,20 +117,185 @@
        "      <td>4.909742</td>\n",
        "      <td>148365000</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2005-05-25</td>\n",
+       "      <td>5.642857</td>\n",
+       "      <td>5.707143</td>\n",
+       "      <td>5.617143</td>\n",
+       "      <td>5.682857</td>\n",
+       "      <td>4.919635</td>\n",
+       "      <td>99001700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2005-05-26</td>\n",
+       "      <td>5.705714</td>\n",
+       "      <td>5.848571</td>\n",
+       "      <td>5.705714</td>\n",
+       "      <td>5.820000</td>\n",
+       "      <td>5.038360</td>\n",
+       "      <td>131380200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2005-05-27</td>\n",
+       "      <td>5.805714</td>\n",
+       "      <td>5.827143</td>\n",
+       "      <td>5.715714</td>\n",
+       "      <td>5.794286</td>\n",
+       "      <td>5.016098</td>\n",
+       "      <td>79002000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2005-05-31</td>\n",
+       "      <td>5.808571</td>\n",
+       "      <td>5.820000</td>\n",
+       "      <td>5.654286</td>\n",
+       "      <td>5.680000</td>\n",
+       "      <td>4.917161</td>\n",
+       "      <td>101051300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>2005-06-01</td>\n",
+       "      <td>5.698571</td>\n",
+       "      <td>5.822857</td>\n",
+       "      <td>5.694286</td>\n",
+       "      <td>5.757143</td>\n",
+       "      <td>4.983943</td>\n",
+       "      <td>113453200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2005-06-02</td>\n",
+       "      <td>5.721428</td>\n",
+       "      <td>5.760000</td>\n",
+       "      <td>5.657143</td>\n",
+       "      <td>5.720000</td>\n",
+       "      <td>4.951789</td>\n",
+       "      <td>93493400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>2005-06-03</td>\n",
+       "      <td>5.451428</td>\n",
+       "      <td>5.511428</td>\n",
+       "      <td>5.395714</td>\n",
+       "      <td>5.462857</td>\n",
+       "      <td>4.729182</td>\n",
+       "      <td>239217300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>2005-06-06</td>\n",
+       "      <td>5.475714</td>\n",
+       "      <td>5.518571</td>\n",
+       "      <td>5.365714</td>\n",
+       "      <td>5.417143</td>\n",
+       "      <td>4.689605</td>\n",
+       "      <td>202991600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>2005-06-07</td>\n",
+       "      <td>5.371428</td>\n",
+       "      <td>5.390000</td>\n",
+       "      <td>5.207143</td>\n",
+       "      <td>5.220000</td>\n",
+       "      <td>4.518939</td>\n",
+       "      <td>186316200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>2005-06-08</td>\n",
+       "      <td>5.232857</td>\n",
+       "      <td>5.321429</td>\n",
+       "      <td>5.224286</td>\n",
+       "      <td>5.274286</td>\n",
+       "      <td>4.565935</td>\n",
+       "      <td>101001600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>2005-06-09</td>\n",
+       "      <td>5.285714</td>\n",
+       "      <td>5.420000</td>\n",
+       "      <td>5.260000</td>\n",
+       "      <td>5.378572</td>\n",
+       "      <td>4.656216</td>\n",
+       "      <td>97563900</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2005-06-10</td>\n",
+       "      <td>5.342857</td>\n",
+       "      <td>5.342857</td>\n",
+       "      <td>5.074286</td>\n",
+       "      <td>5.115714</td>\n",
+       "      <td>4.428659</td>\n",
+       "      <td>169733200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2005-06-13</td>\n",
+       "      <td>5.127143</td>\n",
+       "      <td>5.230000</td>\n",
+       "      <td>5.117143</td>\n",
+       "      <td>5.128572</td>\n",
+       "      <td>4.439791</td>\n",
+       "      <td>108943100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>2005-06-14</td>\n",
+       "      <td>5.131429</td>\n",
+       "      <td>5.164286</td>\n",
+       "      <td>5.107143</td>\n",
+       "      <td>5.142857</td>\n",
+       "      <td>4.452158</td>\n",
+       "      <td>86961700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>2005-06-15</td>\n",
+       "      <td>5.267143</td>\n",
+       "      <td>5.328571</td>\n",
+       "      <td>5.185714</td>\n",
+       "      <td>5.304286</td>\n",
+       "      <td>4.591907</td>\n",
+       "      <td>140835800</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         Date      Open      High       Low     Close  Adj Close     Volume\n",
-       "0  2005-05-18  5.064286  5.365714  4.998571  5.120000   4.432371  159180700\n",
-       "1  2005-05-19  5.111429  5.382857  5.111429  5.364286   4.643848  198290400\n",
-       "2  2005-05-20  5.321429  5.378572  5.312857  5.364286   4.643848  113162700\n",
-       "3  2005-05-23  5.407143  5.700000  5.407143  5.680000   4.917161  260643600\n",
-       "4  2005-05-24  5.635714  5.712857  5.575714  5.671429   4.909742  148365000"
+       "          Date      Open      High       Low     Close  Adj Close     Volume\n",
+       "0   2005-05-18  5.064286  5.365714  4.998571  5.120000   4.432371  159180700\n",
+       "1   2005-05-19  5.111429  5.382857  5.111429  5.364286   4.643848  198290400\n",
+       "2   2005-05-20  5.321429  5.378572  5.312857  5.364286   4.643848  113162700\n",
+       "3   2005-05-23  5.407143  5.700000  5.407143  5.680000   4.917161  260643600\n",
+       "4   2005-05-24  5.635714  5.712857  5.575714  5.671429   4.909742  148365000\n",
+       "5   2005-05-25  5.642857  5.707143  5.617143  5.682857   4.919635   99001700\n",
+       "6   2005-05-26  5.705714  5.848571  5.705714  5.820000   5.038360  131380200\n",
+       "7   2005-05-27  5.805714  5.827143  5.715714  5.794286   5.016098   79002000\n",
+       "8   2005-05-31  5.808571  5.820000  5.654286  5.680000   4.917161  101051300\n",
+       "9   2005-06-01  5.698571  5.822857  5.694286  5.757143   4.983943  113453200\n",
+       "10  2005-06-02  5.721428  5.760000  5.657143  5.720000   4.951789   93493400\n",
+       "11  2005-06-03  5.451428  5.511428  5.395714  5.462857   4.729182  239217300\n",
+       "12  2005-06-06  5.475714  5.518571  5.365714  5.417143   4.689605  202991600\n",
+       "13  2005-06-07  5.371428  5.390000  5.207143  5.220000   4.518939  186316200\n",
+       "14  2005-06-08  5.232857  5.321429  5.224286  5.274286   4.565935  101001600\n",
+       "15  2005-06-09  5.285714  5.420000  5.260000  5.378572   4.656216   97563900\n",
+       "16  2005-06-10  5.342857  5.342857  5.074286  5.115714   4.428659  169733200\n",
+       "17  2005-06-13  5.127143  5.230000  5.117143  5.128572   4.439791  108943100\n",
+       "18  2005-06-14  5.131429  5.164286  5.107143  5.142857   4.452158   86961700\n",
+       "19  2005-06-15  5.267143  5.328571  5.185714  5.304286   4.591907  140835800"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +307,7 @@
     "df = pd.read_csv('./data/AAPL.csv')\n",
     "df.reindex(index=df.index[::-1])\n",
     "\n",
-    "df.head(5)"
+    "df.head(20)"
    ]
   },
   {
@@ -186,204 +351,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>index</th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Adj Close</th>\n",
-       "      <th>Volume</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>2005-05-18</td>\n",
-       "      <td>5.064286</td>\n",
-       "      <td>5.365714</td>\n",
-       "      <td>4.998571</td>\n",
-       "      <td>5.120000</td>\n",
-       "      <td>4.432371</td>\n",
-       "      <td>159180700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2005-05-19</td>\n",
-       "      <td>5.111429</td>\n",
-       "      <td>5.382857</td>\n",
-       "      <td>5.111429</td>\n",
-       "      <td>5.364286</td>\n",
-       "      <td>4.643848</td>\n",
-       "      <td>198290400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2005-05-20</td>\n",
-       "      <td>5.321429</td>\n",
-       "      <td>5.378572</td>\n",
-       "      <td>5.312857</td>\n",
-       "      <td>5.364286</td>\n",
-       "      <td>4.643848</td>\n",
-       "      <td>113162700</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2005-05-23</td>\n",
-       "      <td>5.407143</td>\n",
-       "      <td>5.700000</td>\n",
-       "      <td>5.407143</td>\n",
-       "      <td>5.680000</td>\n",
-       "      <td>4.917161</td>\n",
-       "      <td>260643600</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>2005-05-24</td>\n",
-       "      <td>5.635714</td>\n",
-       "      <td>5.712857</td>\n",
-       "      <td>5.575714</td>\n",
-       "      <td>5.671429</td>\n",
-       "      <td>4.909742</td>\n",
-       "      <td>148365000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>195</th>\n",
-       "      <td>195</td>\n",
-       "      <td>2006-02-27</td>\n",
-       "      <td>10.284286</td>\n",
-       "      <td>10.302857</td>\n",
-       "      <td>10.092857</td>\n",
-       "      <td>10.141429</td>\n",
-       "      <td>8.779409</td>\n",
-       "      <td>197810200</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>196</th>\n",
-       "      <td>196</td>\n",
-       "      <td>2006-02-28</td>\n",
-       "      <td>10.225715</td>\n",
-       "      <td>10.342857</td>\n",
-       "      <td>9.728572</td>\n",
-       "      <td>9.784286</td>\n",
-       "      <td>8.470230</td>\n",
-       "      <td>316745100</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>197</th>\n",
-       "      <td>197</td>\n",
-       "      <td>2006-03-01</td>\n",
-       "      <td>9.834286</td>\n",
-       "      <td>9.927143</td>\n",
-       "      <td>9.717143</td>\n",
-       "      <td>9.871428</td>\n",
-       "      <td>8.545672</td>\n",
-       "      <td>190954400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>198</th>\n",
-       "      <td>198</td>\n",
-       "      <td>2006-03-02</td>\n",
-       "      <td>9.855714</td>\n",
-       "      <td>9.998571</td>\n",
-       "      <td>9.810000</td>\n",
-       "      <td>9.944285</td>\n",
-       "      <td>8.608742</td>\n",
-       "      <td>156318400</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>199</th>\n",
-       "      <td>199</td>\n",
-       "      <td>2006-03-03</td>\n",
-       "      <td>9.914286</td>\n",
-       "      <td>9.987143</td>\n",
-       "      <td>9.647142</td>\n",
-       "      <td>9.674286</td>\n",
-       "      <td>8.375002</td>\n",
-       "      <td>184417100</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>200 rows × 8 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     index        Date       Open       High        Low      Close  Adj Close  \\\n",
-       "0        0  2005-05-18   5.064286   5.365714   4.998571   5.120000   4.432371   \n",
-       "1        1  2005-05-19   5.111429   5.382857   5.111429   5.364286   4.643848   \n",
-       "2        2  2005-05-20   5.321429   5.378572   5.312857   5.364286   4.643848   \n",
-       "3        3  2005-05-23   5.407143   5.700000   5.407143   5.680000   4.917161   \n",
-       "4        4  2005-05-24   5.635714   5.712857   5.575714   5.671429   4.909742   \n",
-       "..     ...         ...        ...        ...        ...        ...        ...   \n",
-       "195    195  2006-02-27  10.284286  10.302857  10.092857  10.141429   8.779409   \n",
-       "196    196  2006-02-28  10.225715  10.342857   9.728572   9.784286   8.470230   \n",
-       "197    197  2006-03-01   9.834286   9.927143   9.717143   9.871428   8.545672   \n",
-       "198    198  2006-03-02   9.855714   9.998571   9.810000   9.944285   8.608742   \n",
-       "199    199  2006-03-03   9.914286   9.987143   9.647142   9.674286   8.375002   \n",
-       "\n",
-       "        Volume  \n",
-       "0    159180700  \n",
-       "1    198290400  \n",
-       "2    113162700  \n",
-       "3    260643600  \n",
-       "4    148365000  \n",
-       "..         ...  \n",
-       "195  197810200  \n",
-       "196  316745100  \n",
-       "197  190954400  \n",
-       "198  156318400  \n",
-       "199  184417100  \n",
-       "\n",
-       "[200 rows x 8 columns]"
+       "0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "observed_chunks[0]"
+    "observed_chunks[2]\n",
+    "observation_results[2]"
    ]
   },
   {
